--- a/chart_demo.html
+++ b/chart_demo.html
@@ -10,11 +10,11 @@
 <body>
     <style>.box {  }; </style>
     <div class="box">
-                <div id="a9d9f7b3ca8d43d6bbe36ba58cc4dc67" class="chart-container" style="width:900px; height:500px;"></div>
+                <div id="8b46ec617d574b559d9a15773d5e60b9" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_a9d9f7b3ca8d43d6bbe36ba58cc4dc67 = echarts.init(
-            document.getElementById('a9d9f7b3ca8d43d6bbe36ba58cc4dc67'), 'white', {renderer: 'canvas'});
-        var option_a9d9f7b3ca8d43d6bbe36ba58cc4dc67 = {
+        var chart_8b46ec617d574b559d9a15773d5e60b9 = echarts.init(
+            document.getElementById('8b46ec617d574b559d9a15773d5e60b9'), 'white', {renderer: 'canvas'});
+        var option_8b46ec617d574b559d9a15773d5e60b9 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -519,13 +519,13 @@
         "text": "line_demo"
     }
 };
-        chart_a9d9f7b3ca8d43d6bbe36ba58cc4dc67.setOption(option_a9d9f7b3ca8d43d6bbe36ba58cc4dc67);
+        chart_8b46ec617d574b559d9a15773d5e60b9.setOption(option_8b46ec617d574b559d9a15773d5e60b9);
     </script>
-<br/>                <div id="5583747691354d36bf672253d0bdcf6a" class="chart-container" style="width:900px; height:500px;"></div>
+<br/>                <div id="be9982f67acf401e86fbfe2f3a3b6418" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_5583747691354d36bf672253d0bdcf6a = echarts.init(
-            document.getElementById('5583747691354d36bf672253d0bdcf6a'), 'white', {renderer: 'canvas'});
-        var option_5583747691354d36bf672253d0bdcf6a = {
+        var chart_be9982f67acf401e86fbfe2f3a3b6418 = echarts.init(
+            document.getElementById('be9982f67acf401e86fbfe2f3a3b6418'), 'white', {renderer: 'canvas'});
+        var option_be9982f67acf401e86fbfe2f3a3b6418 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -640,13 +640,13 @@
         "text": "pie_demo"
     }
 };
-        chart_5583747691354d36bf672253d0bdcf6a.setOption(option_5583747691354d36bf672253d0bdcf6a);
+        chart_be9982f67acf401e86fbfe2f3a3b6418.setOption(option_be9982f67acf401e86fbfe2f3a3b6418);
     </script>
-<br/>                <div id="ce56e3ad634141c98c06534f29209a7d" class="chart-container" style="width:900px; height:500px;"></div>
+<br/>                <div id="f1006d30e55342329c07ef189a47f781" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_ce56e3ad634141c98c06534f29209a7d = echarts.init(
-            document.getElementById('ce56e3ad634141c98c06534f29209a7d'), 'white', {renderer: 'canvas'});
-        var option_ce56e3ad634141c98c06534f29209a7d = {
+        var chart_f1006d30e55342329c07ef189a47f781 = echarts.init(
+            document.getElementById('f1006d30e55342329c07ef189a47f781'), 'white', {renderer: 'canvas'});
+        var option_f1006d30e55342329c07ef189a47f781 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -784,13 +784,13 @@
         "text": "bar_demo"
     }
 };
-        chart_ce56e3ad634141c98c06534f29209a7d.setOption(option_ce56e3ad634141c98c06534f29209a7d);
+        chart_f1006d30e55342329c07ef189a47f781.setOption(option_f1006d30e55342329c07ef189a47f781);
     </script>
-<br/>                <div id="228ade7d7e134696be47af80775640c5" class="chart-container" style="width:900px; height:500px;"></div>
+<br/>                <div id="197c9085341e4af385f07c819be630d5" class="chart-container" style="width:900px; height:500px;"></div>
     <script>
-        var chart_228ade7d7e134696be47af80775640c5 = echarts.init(
-            document.getElementById('228ade7d7e134696be47af80775640c5'), 'white', {renderer: 'canvas'});
-        var option_228ade7d7e134696be47af80775640c5 = {
+        var chart_197c9085341e4af385f07c819be630d5 = echarts.init(
+            document.getElementById('197c9085341e4af385f07c819be630d5'), 'white', {renderer: 'canvas'});
+        var option_197c9085341e4af385f07c819be630d5 = {
     "animation": true,
     "animationThreshold": 2000,
     "animationDuration": 1000,
@@ -829,7 +829,6 @@
         {
             "type": "heatmap",
             "coordinateSystem": "calendar",
-            "name": "aaa",
             "data": [
                 [
                     "2018-01-01",
@@ -2302,10 +2301,10 @@
     "legend": [
         {
             "data": [
-                "aaa"
+                ""
             ],
             "selected": {
-                "aaa": true
+                "": true
             },
             "show": true,
             "padding": 5,
@@ -2356,7 +2355,7 @@
         "itemHeight": 14
     }
 };
-        chart_228ade7d7e134696be47af80775640c5.setOption(option_228ade7d7e134696be47af80775640c5);
+        chart_197c9085341e4af385f07c819be630d5.setOption(option_197c9085341e4af385f07c819be630d5);
     </script>
 <br/>    </div>
     <script>
